[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "fizzify"
version = "0.2.3"
description = "Default template for PDM package"
authors = [
    {name = "a129924", email = "a129924@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.115.6",
    "sqlalchemy>=2.0.36",
    "strawberry-graphql[fastapi]>=0.246.2",
    "PyJWT>=2.10.1",
    "passlib>=1.7.4",
    "bcrypt>=4.2.1",
    "aioodbc>=0.5.0",
    "pyodbc>=5.2.0",
]


requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
aioodbc = [
    "aioodbc>=0.5.0",
]
pyodbc = [
    "pyodbc>=5.2.0",
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
]
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]